<resources>
    <string name="app_name">BPL Fantasy League</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="hint_user_id">User ID</string>


    <string name="label_google_sign_in">Firebase + Google Sign In</string>

    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>


    <string name="label_facebook_login">Firebase + Facebook Login</string>

    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>


    <string name="label_twitter_login">Firebase + Twitter Login</string>

    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>


    <string name="label_emailpassword">Email/Password Authentication</string>

    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>


    <string name="label_phone_auth">Phone Number Authentication</string>

    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>


    <string name="label_anonymous_auth">Anonymous Authentication</string>

    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>


    <string name="label_custom_auth">Custom Authentication</string>

    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>


    <string name="label_firebase_ui">FirebaseUI Auth</string>

    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>


    <string name="get_custom_token">Get Token</string>

    <string name="sign_in">Sign In</string>

    <string name="create_account">Create Account</string>

    <string name="sign_out">Sign Out</string>

    <string name="verify_email">Verify Email</string>

    <string name="disconnect">Disconnect</string>

    <string name="loading">Loading…</string>

    <string name="custom_token">Custom Token</string>

    <string name="signed_in">Signed In</string>

    <string name="signed_out">Signed Out</string>

    <string name="token_null">Token: null</string>

    <string name="hint_email">Email</string>

    <string name="hint_password">Password</string>

    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <string name="auth_failed">Authentication failed</string>

    <string name="start_phone_auth">Start</string>

    <string name="verify_phone_auth">Verify</string>

    <string name="resend_phone_auth">Resend</string>

    <string name="hint_phone_number">Phone Number</string>

    <string name="hint_verification_code">Verification Code</string>

    <string name="status_code_sent">Code Sent</string>

    <string name="status_verification_failed">Verification failed</string>

    <string name="status_verification_succeeded">Verification succeeded</string>

    <string name="status_sign_in_failed">Sign-in failed</string>

    <string name="instant_validation">(instant validation)</string>


    <string name="firebase_status_fmt">Firebase User: %s</string>

    <string name="firebase_user_management">Firebase User Management</string>


    <string name="google_status_fmt">Google User: %s</string>

    <string name="google_title_text">Google Sign In</string>


    <string name="facebook_status_fmt">Facebook User: %s</string>

    <string name="facebook_title_text">Facebook Login</string>


    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>

    <string name="emailpassword_title_text">Email and Password</string>


    <string name="phone_title_text">Phone Number</string>


    <string name="twitter_status_fmt">Twitter User: %s</string>

    <string name="twitter_title_text">Twitter Login</string>


    <string name="firebaseui_status_fmt">Firebase User: %s</string>

    <string name="firebaseui_title_text">FirebaseUI Auth</string>


    <string name="id_fmt">User ID: %s</string>

    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_login">LOG IN</string>
    <string name="myteam">MY TEAM</string>
    <string name="points">POINTS</string>
    <string name="transfers">TRANSFERS</string>
    <string name="fixtures">FIXTURES</string>
    <string name="finance">FINANCE</string>
    <string name="settings">SETTINGS</string>
    <string name="log_out">LOG OUT</string>
    <string name="refresh">REFRESH</string>
    <string name="share">SHARE</string>
    <string name="image">\"lol\"</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="select_team">SELECT TEAM</string>
    <string name="total_balance">Total Balance</string>
    <string name="_100m_dollar">100m $</string>
    <string name="todo">TODO</string>
    <string name="age">AGE</string>
    <string name="country">COUNTRY</string>
    <string name="textview">TextView</string>
    <string name="this_is_not_a_transfer_session_text">THIS IS NOT A TRANSFER SESSION</string>
    <string name="total_selected">Total selected</string>
    <string name="price">PRICE</string>
    <string name="name">NAME</string>
    <string name="role">ROLE</string>
    <string name="totalscore">TOTALSCORE</string>
    <string name="team">TEAM</string>
    <string name="rank">RANK</string>
    <string name="owner">OWNER</string>
    <string name="score">SCORE</string>


</resources>
