<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aap.bplfantasyleague.fragment.Tab2">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:id="@+id/test1">
        <TableLayout
            android:id="@+id/points_table"
            android:background="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:stretchColumns="*"
            android:layout_centerHorizontal="true">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView android:text="@string/rank" />

                <TextView android:text="@string/team"/>

                <TextView android:text="@string/owner"/>
                <TextView android:text="@string/score"/>
            </TableRow>
        </TableLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/test2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/test1">

    </RelativeLayout>


</RelativeLayout>
