<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aap.bplfantasyleague.fragment.Tab1">
 <RelativeLayout
     android:id="@+id/table_header"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="5dp"
     android:background="@color/white">
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/name"
      />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/role"
      android:layout_centerHorizontal="true"/>
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/points"
      android:layout_alignParentRight="true"/>

 </RelativeLayout>
 <RelativeLayout
     android:id="@+id/rec"
     android:layout_width="match_parent"
     android:layout_height="145dp"
     android:layout_below="@id/table_header">
  <android.support.v7.widget.RecyclerView
      android:id="@+id/myteam_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scrollbars="vertical">


  </android.support.v7.widget.RecyclerView>

 </RelativeLayout>
 <RelativeLayout
     android:id="@+id/table_footer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="5dp"
     android:layout_below="@+id/rec"
     android:background="@color/white">
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/totalscore"
      />
  <TextView
      android:id="@+id/my_team_totalscore"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"/>

 </RelativeLayout>

 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_below="@id/table_footer"
     android:background="@color/white"
     android:layout_marginTop="30dp">
  <com.github.mikephil.charting.charts.BarChart
      android:id="@+id/my_team_graph"
      android:layout_marginTop="10dp"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

  </com.github.mikephil.charting.charts.BarChart>
 </RelativeLayout>

</RelativeLayout>
